Added SIFT and SURF

--- a/Q3/Q3.ipynb
+++ b/Q3/Q3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e7b13de3",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "img=Image.open(\"1 img.jpg\")\n",
+    "img=Image.open(\"./dataset/1 img.jpg\")\n",
     "img"
    ]
   },
